fix: Corrige múltiplas instâncias GoTrueClient e erro CORS Google Fonts
- Implementa singleton global para supabase e supabase-admin
- Adiciona crossOrigin='anonymous' para fontes Google
- Resolve erros de TypeScript em componentes
- Aplicação funcionando sem erros no console
- Preparação para otimizações de performance Lighthouse

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: blob: https: videos.openai.com images.unsplash.com; connect-src 'self' *.supabase.co wss://*.supabase.co videos.openai.com images.unsplash.com; media-src 'self' blob: data: videos.openai.com; object-src 'none'; base-uri 'self'; form-action 'self';" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico?v=1" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1" />
