feat: remove mock data and restore full Supabase integration
- Remove forced mock data loading from useArticles hook
- Restore complete Supabase database integration
- Fix articles and categories loading from real database
- Enable full CRUD operations for admin panel
- Add enhanced debug logging for preview environments
- Application ready for production deployment

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <link rel="preload" href="/src/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/src/index.css"></noscript>
     
-    <!-- Preload de fontes críticas com font-display swap -->
-    <link rel="preload" href="https://fonts.gstatic.com/s/inter/v18/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="https://fonts.gstatic.com/s/inter/v18/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2" as="font" type="font/woff2" crossorigin>
+    <!-- Preload de fontes críticas com font-display swap - TEMPORARIAMENTE DESABILITADO PARA PREVIEW -->
+    <!-- <link rel="preload" href="https://fonts.gstatic.com/s/inter/v18/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2" as="font" type="font/woff2" crossorigin> -->
+    <!-- <link rel="preload" href="https://fonts.gstatic.com/s/inter/v18/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2" as="font" type="font/woff2" crossorigin> -->
     
     <!-- Preload de recursos JavaScript críticos -->
     <link rel="modulepreload" href="/src/main.tsx">
