Sistema de Backup Completo e Funcional
 FUNCIONALIDADES IMPLEMENTADAS:
- Sistema de backup automático com cron job
- Monitoramento de backup em tempo real
- Interface de administração com formatação de tempo legível
- APIs funcionais: /api/backup-status e /api/auto-backup
- Sistema de limpeza automática de logs (90 dias backup, 30 dias outros)
- Sistema de retenção para evitar sobrecarga do banco
- Alertas inteligentes de backup atrasado

 CORREÇÕES APLICADAS:
- Correção de erros CSP e CORS
- Correção do operador JSON (|| -> jsonb_build_object)
- Correção de timezone do cron job
- Correção de estrutura de resposta HTTP
- Habilitação da extensão pg_net

 MIGRAÇÕES SUPABASE:
- 092-097: Sistema de backup e limpeza
- Funções RPC: cleanup_old_backups, check_backup_health
- Tabelas: system_logs com políticas de retenção

 PRONTO PARA PRODUÇÃO!

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="preload" href="/src/index.css" as="style">
     <link rel="preload" href="/src/styles/mobile-usability.css" as="style">
     
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' data:; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: blob: https: videos.openai.com images.unsplash.com; connect-src 'self' *.supabase.co wss://*.supabase.co videos.openai.com images.unsplash.com; media-src 'self' blob: data: videos.openai.com; object-src 'none'; base-uri 'self'; form-action 'self';" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' data:; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: blob: https: videos.openai.com images.unsplash.com; connect-src 'self' http://localhost:* *.supabase.co wss://*.supabase.co videos.openai.com images.unsplash.com; media-src 'self' blob: data: videos.openai.com; object-src 'none'; base-uri 'self'; form-action 'self';" />
     
     <!-- Critical CSS Inline para melhor FCP -->
     <style>
