--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
     <!-- Resource Hints otimizados -->
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
     <link rel="preconnect" href="https://unpkg.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Remover preconnect de Google Fonts para evitar conexões desnecessárias no mobile -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link rel="preconnect" href="https://*.supabase.co" crossorigin>
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="//unpkg.com">
-    <link rel="dns-prefetch" href="//fonts.googleapis.com">
-    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    <!-- <link rel="dns-prefetch" href="//fonts.googleapis.com"> -->
+    <!-- <link rel="dns-prefetch" href="//fonts.gstatic.com"> -->
     
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=1" />
