--- a/index.html
+++ b/index.html
@@ -25,37 +25,49 @@
     <!-- Critical CSS Inline para melhor FCP -->
     <style>
       /* Critical CSS - Above the fold styles */
-      *{box-sizing:border-box}
-      html{scroll-behavior:smooth;overflow-x:hidden}
-      body{
-        margin:0;padding:0;
-        font-family:'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
-        background:#0D1B2A;
-        background:linear-gradient(135deg,#0D1B2A 0%,#1A1A1A 100%);
-        color:#B0B0B0;
-        min-height:100vh;
-        overflow-x:hidden;
-        -webkit-font-smoothing:antialiased;
-        -moz-osx-font-smoothing:grayscale;
-        text-rendering:optimizeLegibility;
+      * { box-sizing: border-box }
+      html { scroll-behavior: smooth; overflow-x: hidden }
+      body {
+        margin: 0; padding: 0;
+        font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Arial, sans-serif;
+        background: #0D1B2A;
+        background: linear-gradient(135deg, #0D1B2A 0%, #1A1A1A 100%);
+        color: #B0B0B0;
+        min-height: 100vh;
+        overflow-x: hidden;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-rendering: optimizeLegibility;
       }
-      #root{min-height:100vh}
-      .loading-spinner{
-        position:fixed;top:50%;left:50%;
-        transform:translate(-50%,-50%);
-        width:40px;height:40px;
-        border:3px solid rgba(106,13,173,0.3);
-        border-top:3px solid #6A0DAD;
-        border-radius:50%;
-        animation:spin 1s linear infinite;
+      #root { min-height: 100vh }
+
+      /* Hero essentials for instant render */
+      section[role="banner"] { min-height: 100vh; display: flex; align-items: center; justify-content: center; text-align: center }
+      .bg-dark-gradient { background: radial-gradient(1200px 600px at 50% 10%, rgba(106,13,173,0.08), transparent 60%), linear-gradient(135deg, #0D1B2A, #1A1A1A) }
+      .text-white { color: #FFFFFF }
+      .text-futuristic-gray { color: #B0B0B0 }
+      .text-lime-green { color: #32CD32 }
+      .gradient-text { background: linear-gradient(135deg, #6A0DAD 0%, #32CD32 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text }
+      h1 { margin: 0 0 0.5rem; font-weight: 700; line-height: 1.1 }
+      p { margin: 0 0 1rem }
+      a { color: inherit; text-decoration: none }
+      button { appearance: none; border: 1px solid rgba(106,13,173,0.3); background: rgba(20,20,20,0.6); color: #fff; border-radius: 12px; padding: 0.75rem 1.25rem; cursor: pointer }
+      button:hover { filter: brightness(1.1) }
+
+      /* Card and glass effect minimal fallback */
+      .glass-effect { background: rgba(20,20,20,0.5); border: 1px solid rgba(106,13,173,0.2); border-radius: 16px }
+      .hover-lift { transition: transform 200ms ease }
+      .hover-lift:hover { transform: translateY(-2px) }
+
+      /* Loading spinner (rarely used above the fold) */
+      .loading-spinner {
+        position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+        width: 40px; height: 40px; border: 3px solid rgba(106,13,173,0.3); border-top: 3px solid #6A0DAD; border-radius: 50%; animation: spin 1s linear infinite
       }
-      @keyframes spin{0%{transform:translate(-50%,-50%) rotate(0deg)}100%{transform:translate(-50%,-50%) rotate(360deg)}}
-      .gradient-text{
-        background:linear-gradient(135deg,#6A0DAD 0%,#32CD32 100%);
-        -webkit-background-clip:text;
-        -webkit-text-fill-color:transparent;
-        background-clip:text;
-      }
+      @keyframes spin { 0% { transform: translate(-50%, -50%) rotate(0deg) } 100% { transform: translate(-50%, -50%) rotate(360deg) } }
+
+      /* Respect reduced motion for instant paint */
+      @media (prefers-reduced-motion: reduce) { * { animation: none !important; transition: none !important } }
     </style>
     
     <!-- Preload de recursos críticos -->
